src/front-end/css/doe/schedule.module.scss
@import "../defs";

.wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: $bright_teal;
  clip-path: polygon(0 0, 100% 50px, 100% 100%, 0 calc(100% - 50px));
  padding: 3px 0;
  margin-bottom: -20px;
}

.container {
  padding: 40px 15px;
  // @include border();
  width: calc(100% - 6px);
  position: relative;
  padding: 60px 19px 77px 21px;
  background-color: $darker_teal;
  clip-path: polygon(0 0, 100% 50px, 100% 100%, 0 calc(100% - 50px));

  h2 {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 39px;
    color: white;
  }

  h3 {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: 0.07em;
    text-transform: uppercase;
    color: white;

    > span {
      font-weight: 400;
      color: #9ee7e5;
    }

    &.activityh3 {
      font-family: "Proxima Nova";
      font-style: normal;
      font-weight: 700;
      font-size: 16px;
      line-height: 19px;
      letter-spacing: 0;
      text-transform: none;
      color: #ffbb4d;
    }
  }
}

.scheduleCards {
  max-height: 575px;
  overflow-y: scroll;
  position: relative;
  margin-bottom: 24px;
}

// .gradient {
//   display: block;
//   position: sticky;
//   width: 100%;
//   top: 0px;
//   height: 20px;
//   margin-bottom: -20px;
//   background-image: -webkit-linear-gradient(to bottom,rgba(23, 58, 82, 0.7), rgba(255, 255, 255, 0));
//   background-image: -webkit-gradient(rgba(23, 58, 82, 0.7), rgba(255, 255, 255, 0));
// }

.gradient_bot {
  display: none;
}

.cardContainer {
  display: flex;
  align-items: flex-start;
  gap: 0 12px;
  background-color: #436073;
  border-radius: 8px;
  margin-bottom: 16px;
  padding: 14px 20px 9px;
}

.cardInfo {
  > p {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    color: white;
    margin-bottom: 5px;
  }

  > h4 {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 19px;
    margin-bottom: 5px;
  }

  > h5 {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    color: rgba(255, 255, 255, 0.75);
    margin-bottom: 5px;
  }

  > h6 {
    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    color: #ffffff;
    display: flex;
    align-items: center;
    margin-bottom: 5px;

    > img {
      width: 10px;
      margin-right: 11px;
    }
  }
}

.dot {
  border-radius: 50%;
  width: 8px;
  height: 8px;
  margin-top: 3px;
}

.dot.blue {
  background-color: #9ee7e5;
}

.dot.yellow {
  background-color: #fbc53e;
}

.dot.green {
  background-color: #c0e267;
}
.dot.white {
  background-color: white;
}

h4.blue {
  color: #9ee7e5;
}

h4.yellow {
  color: #fbc53e;
}

h4.green {
  color: #c0e267;
}

h4.white {
  color: white;
}

.sundayTitle {
  font-family: "Proxima Nova";
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0.07em;
  text-transform: uppercase;
  color: white;
  > span {
    font-weight: 400;
    color: #9ee7e5;
  }
}

.filters {
  border-radius: 8px;
  background-color: #415e72;
  display: flex;
  flex-flow: row wrap;
  // height: 153px;
  padding: 11px;
  gap: 10px;
  margin-bottom: 35px;

  > button {
    &:nth-of-type(1) {
      color: white;
      &.selected {
        background-color: white;
        color: #2d4e63;
      }
    }
    &:nth-of-type(2) {
      color: #fbc53e;
      &.selected {
        background-color: #fbc53e;
        color: #2d4e63;
      }
    }
    &:nth-of-type(3) {
      color: #9ee7e5;
      &.selected {
        background-color: #9ee7e5;
        color: #2d4e63;
      }
    }
    &:nth-of-type(4) {
      color: #c2e566;
      &.selected {
        background-color: #c2e566;
        color: #2d4e63;
      }
    }

    font-family: "Proxima Nova";
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 22px;
    padding: 10px 20px;
    text-align: left;
    background: transparent;
    text-decoration: none;
    width: 45%;
    border-radius: 4px;

    &:nth-of-type(odd) {
      flex-grow: 1;
    }
  }
}

.ongoing {
  border: solid 2px #b7eeec;
  padding: 12px 18px 7px;
}

@media (min-width: 992px) {
  .wrapper {
    flex-grow: 1;
    clip-path: none;
    overflow-y: hidden;
    margin-bottom: 0;
  }

  .container {
    clip-path: none;
    padding: 50px min(60px, 2vw) 44px;
    height: 100%;
    overflow-y: auto;

    h2 {
      text-align: center;
      font-size: 40px;
      line-height: 49px;
      margin-bottom: 30px;
    }

    h3 {
      font-size: 24px;
      line-height: 29px;

      &.activityh3 {
        margin-top: 13px;
        font-size: 20px;
        line-height: 24px;
        color: white;
      }
    }
  }

  .filters {
    flex-flow: row nowrap;
    max-width: 413px;
    padding: 5px;

    > button {
      padding: 8px 16px;

      &:nth-of-type(1) {
        order: 1;
      }
      &:nth-of-type(2) {
        order: 3;
      }
      &:nth-of-type(3) {
        order: 2;
      }
      &:nth-of-type(4) {
        order: 4;
      }
      &:nth-of-type(odd) {
        flex-grow: 0;
      }
    }
  }

  .schedules {
    display: flex;
    gap: 0 min(60px, 2vw);
  }

  .scheduleCards {
    overflow-y: auto;
    // box-shadow:
    //   inset 0px 20px 8px -10px rgba(0,0,0,0.3),
    //   inset 0px -20px 8px -10px rgba(0,0,0,0.3);
    > div:last-of-type {
      margin-bottom: 0;
    }
  }
  .gradient_bot {
    display:block;
    position: sticky;
    width: 100%;
    bottom: 0px;
    height: 20px;
    margin-top: -20px;
    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(23, 58, 82, 0.7));
    background-image: -webkit-gradient(rgba(255, 255, 255, 0), rgba(23, 58, 82, 0.7));
  }

  .activityCards {
    display: flex;
    gap: 0 16px;
  }
  .scheduleCards::-webkit-scrollbar {
    width: 6px;
  }

  .scheduleCards::-webkit-scrollbar-track {
    border-radius: 100px;
    margin-left: 30px;
    width: 6px;
    background-color: #123045;
  }
  .scheduleCards::-webkit-scrollbar-thumb {
    border-radius: 100px;
    width: 6px;
    background-color: #a8e9e8;
  }

  .cardContainer {
    width: calc(100% - 10px);
  }
}

